--- a/Humraah/Humraah/Web.config
+++ b/Humraah/Humraah/Web.config
@@ -11,6 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Humraah-20191202121408.mdf;Initial Catalog=aspnet-Humraah-20191202121408;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="Station" connectionString="data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Humraah-20191202121408.mdf;initial catalog=aspnet-Humraah-20191202121408;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="User" connectionString="data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Humraah-20191202121408.mdf;initial catalog=aspnet-Humraah-20191202121408;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="HumraahContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Humraah-20191202121408.mdf;initial catalog=aspnet-Humraah-20191202121408;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="HumraahModelContainer" connectionString="metadata=res://*/Models.HumraahModel.csdl|res://*/Models.HumraahModel.ssdl|res://*/Models.HumraahModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Humraah-20191202121408.mdf;initial catalog=aspnet-Humraah-20191202121408;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
