--- a/Humraah/Humraah/Humraah.csproj
+++ b/Humraah/Humraah/Humraah.csproj
@@ -173,25 +173,63 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
-    <Compile Include="DAL\Address.cs" />
-    <Compile Include="DAL\Ambulance.cs" />
-    <Compile Include="DAL\AspNetRole.cs" />
-    <Compile Include="DAL\AspNetUser.cs" />
-    <Compile Include="DAL\AspNetUserClaim.cs" />
-    <Compile Include="DAL\AspNetUserLogin.cs" />
-    <Compile Include="DAL\Booking.cs" />
-    <Compile Include="DAL\C__MigrationHistory.cs" />
-    <Compile Include="DAL\Driver.cs" />
-    <Compile Include="DAL\HumraahContext.cs" />
-    <Compile Include="DAL\Station.cs" />
-    <Compile Include="DAL\Type.cs" />
-    <Compile Include="DAL\User.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Address.cs">
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Ambulance.cs">
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AspNetRole.cs">
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AspNetUser.cs">
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AspNetUserClaim.cs">
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AspNetUserLogin.cs">
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Booking.cs">
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\C__MigrationHistory.cs">
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Driver.cs">
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\HumraahModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HumraahModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\HumraahModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\HumraahModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HumraahModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Station.cs">
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Type.cs">
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\User.cs">
+      <DependentUpon>HumraahModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -204,8 +242,25 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Models\HumraahModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>HumraahModel.Context.cs</LastGenOutput>
+      <DependentUpon>HumraahModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\HumraahModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>HumraahModel.cs</LastGenOutput>
+      <DependentUpon>HumraahModel.edmx</DependentUpon>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <EntityDeploy Include="Models\HumraahModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>HumraahModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\HumraahModel.edmx.diagram">
+      <DependentUpon>HumraahModel.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -270,6 +325,9 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
